--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ body {
 #header {
     width: 100%;
     height: 10%;
-    margin-top: 40px;
-    margin-bottom: 30px;
+    margin-top: 10vh;
+    margin-bottom: 5vh;
     font-family: 'Nunito Sans', sans-serif;
     
 }
@@ -24,11 +24,11 @@ body {
     text-align: center;
 }
 
-#can {
+.can {
     width: 90%;
     height: auto;
-    margin-left: auto;
-    margin-right: auto;
+    display: grid;
+    
 }
 
 #jump {
