--- a/style.css
+++ b/style.css
@@ -50,3 +50,9 @@ body {
     border: 1px solid black;
     background-color: black;
 }
+
+button {
+    width:50px;
+    height: 30px;
+    margin-bottom: 5px;
+}
