--- a/style.css
+++ b/style.css
@@ -24,24 +24,13 @@ body {
     text-align: center;
 }
 
-#jump {
-    width: 90px;
-    height: 45px;
-    background-color: red;
-    color: white;
-    border-radius: 5px;
-    position: relative;
-    margin-left: 45%;   
-    font-family: 'Nunito Sans', sans-serif;
-    font-size: 23px;
-}
-
 #canvas {
-    width: 600px;
-    height: 400px;
-    width: 100%;
-    border: 1px solid black;
-    background-color: black;
+    width: 800px;
+    height: 600px;
+    width: 90%;
+    border: 5px solid rgb(219, 41, 151);
+    background-color: rgb(32, 83, 72);
+    border-radius: 10px;
 }
 
 button {
@@ -50,4 +39,6 @@ button {
     margin-bottom: 5px;
     border: 2px solid black;
     border-radius: 4px;
+    color: blue;
+    font-size: 20px;
 }
